--- a/admin/index.html
+++ b/admin/index.html
@@ -1,13 +1,13 @@
 ﻿<!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HUANG 黄 - 商品后台管理</title>
 
   <!-- Netlify Identity Widget -->
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  
+
   <!-- Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@^2.15.0/dist/netlify-cms.js"></script>
 
@@ -34,14 +34,10 @@
     // 初始化 Netlify Identity
     if (window.netlifyIdentity) {
       window.netlifyIdentity.on('init', user => {
-        console.log('Identity initialized', user);
-
         if (user) {
-          // 已登录，显示 CMS
           document.getElementById('cms').style.display = 'block';
           document.getElementById('login-area').style.display = 'none';
         } else {
-          // 未登录，隐藏 CMS
           document.getElementById('cms').style.display = 'none';
           document.getElementById('login-area').style.display = 'block';
         }
@@ -64,10 +60,7 @@
 
     NetlifyCms.init({
       config: {
-        backend: {
-          name: 'git-gateway',
-          branch: 'main'
-        },
+        backend: { name: 'git-gateway', branch: 'main' },
         media_folder: 'images',
         public_folder: '/images',
         collections: [
@@ -89,7 +82,6 @@
       }
     });
 
-    // 手动初始化 CMS
     NetlifyCms.init();
   </script>
 </body>
