--- a/admin/index.html
+++ b/admin/index.html
@@ -83,6 +83,31 @@
     });
 
     NetlifyCms.init();
-  </script>
+if (window.netlifyIdentity) {
+  window.netlifyIdentity.on('init', user => {
+    if (user) {
+      // 已登录，显示 CMS
+      document.getElementById('cms').style.display = 'block';
+      document.getElementById('login-area').style.display = 'none';
+    } else {
+      document.getElementById('cms').style.display = 'none';
+      document.getElementById('login-area').style.display = 'block';
+    }
+  });
+
+  window.netlifyIdentity.on('login', () => {
+    // 登录后直接显示 CMS，不刷新页面
+    document.getElementById('cms').style.display = 'block';
+    document.getElementById('login-area').style.display = 'none';
+  });
+
+  window.netlifyIdentity.on('logout', () => {
+    document.getElementById('cms').style.display = 'none';
+    document.getElementById('login-area').style.display = 'block';
+  });
+
+  window.netlifyIdentity.init();
+}
+
 </body>
 </html>
